src/objects/Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>垂直</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccuracyLevel__c</fullName>
        <label>精度レベル</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSpecial__c</fullName>
        <label>特別</label>
        <defaultValue>false</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rounding__c</fullName>
        <label>丸め精度</label>
        <type>Number</type>
        <precision>12</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>TabIndex__c</fullName>
        <label>Tab Index</label>
        <type>Number</type>
        <precision>12</precision>
        <scale>0</scale>
    </fields>
    <label>設定</label>
    <pluralLabel>設定</pluralLabel>
</CustomObject>